--- a/package.json
+++ b/package.json
@@ -24,7 +24,11 @@
     "@ng-bootstrap/ng-bootstrap": "^1.0.0",
     "bootstrap": "^4.0.0",
     "core-js": "^2.4.1",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
+    "ng2-smart-table": "^1.2.2",
+    "ngx-bootstrap": "^2.0.2",
+    "ngx-pipes": "^2.1.0",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
@@ -35,6 +39,7 @@
     "@angular/language-service": "^5.1.0",
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
+    "@types/jquery": "^3.3.0",
     "@types/node": "~6.0.60",
     "codelyzer": "^4.0.1",
     "jasmine-core": "~2.8.0",
